# solvers

./: .gitignore  CMakeLists.txt  bisection.cpp  fixed-point-iteration.cpp  newton.cpp  regula-falsi.cpp  secant.cpp
Bisection Method/: Bisection  Bisection.cpp
Newton-Raphson Method/: Newton.cpp
Regula-Falsi/: regula-falsi.cpp
bisectionMethod/: Bisection.cpp  bisection.cpp
newtonRaphsonMethod/: newton.cpp
regulaFalsiMethod/: regula-falsi.cpp
secantMethod/: secant.cpp
